# full-text-search

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/libfts/: indexer.hpp  options.hpp  parser.hpp  picosha2.h  searcher.hpp  solver.hpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/app/: main.cpp
src/libfts/: CMakeLists.txt
src/libfts/libfts/: indexer.cpp  options.cpp  parser.cpp  searcher.cpp  solver.cpp
tests/: CMakeLists.txt
tests/tests/: indexer.test.cpp  parser.test.cpp  searcher.test.cpp  solver.test.cpp
